java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/UncaughtExceptionTest/testDuplicateHintEntries-hints.pass
Add throws clause for org.netbeans.test.java.hints.Exc1
Surround with try-catch
Add throws clause for org.netbeans.test.java.hints.Exc2
Surround with try-catch
